--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,10 @@ footer {
   margin-right: 20px; /* Optional: Add right margin for spacing */
 }
 
+ .tools-cards{
+     justify-content: space-between !important;
 
+ }
 
 
 /* AOS Animation */
@@ -129,4 +132,3 @@ footer {
 .documentation.show {
     opacity: 1;
 }
-
