--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+        .logo {
+    width: 340px;
+    height: auto;
+}
+        .logo img {
+            width="100%";
+        
+    }
 
 body {
   font-family: 'Poppins', sans-serif;
